--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,11 @@ dependencies {
 //    implementation 'com.jakewharton:butterknife:10.2.1'
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 
+    //circle imageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     //FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.4.1'
+    implementation 'com.google.firebase:firebase-core:17.4.2'
 
     // FirebaseUI
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
@@ -71,6 +74,9 @@ dependencies {
     // Required only if Twitter login support is required
     // Find the latest Twitter SDK releases here: https://goo.gl/E5wZvQ
     implementation 'com.twitter.sdk.android:twitter-core:3.2.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
 }
 //FIREBASE
