--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.4.2'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
 
     // FirebaseUI
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
@@ -77,6 +77,9 @@ dependencies {
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //location
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 }
 //FIREBASE
