--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
     }
 
 /*    def secretsProperties = new Properties()
@@ -80,6 +82,13 @@ dependencies {
 
     //location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //multiDex fix
+    implementation 'com.android.support:multidex:1.0.3'
 
 }
 //FIREBASE
