--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".BottomNavActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_bottom_nav"
             android:theme="@style/AppTheme" />
         <activity android:name=".AuthActivity">
