--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,12 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".DetailRestaurant"
+            android:name=".SettingsActivity" />
+
+        <activity
+            android:name=".RestaurantDetails"
             android:label="@string/title_activity_detail_restaurant"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
