--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,38 @@ apply plugin: 'com.android.application'
 //FIREBASE
 apply plugin: 'com.google.gms.google-services'
 
+//// Creates a variable called keystorePropertiesFile, and initializes it to the
+//// keystore.properties file.
+//def keystorePropertiesFile = rootProject.file("keystore.properties")
+//
+//// Initializes a new Properties() object called keystoreProperties.
+//def keystoreProperties = new Properties()
+//
+//// Loads the keystore.properties file into the keystoreProperties object.
+//keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+//
+//resValie "string", "google_maps_key", (keystoreProperties["Google_MAPS_API_KEY"])
+
+//    def secretsProperties = new Properties()
+//    if (rootProject.file("secrets.properties").exists()) {
+//        rootProject.file("secrets.properties")?.withInputStream {
+//            secretsProperties.load(it)
+//        }
+//    }
+//    resValue "string", "google_maps_key", (secretsProperties["GOOGLE_MAPS_API_KEY"] ?: "")
+
+
 android {
-    compileSdkVersion 29
+//    signingConfigs {
+//        config {
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile file(keystoreProperties['storeFile'])
+//            storePassword keystoreProperties['storePassword']
+//        }
+
+
+        compileSdkVersion 29
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -22,14 +52,6 @@ android {
         multiDexEnabled true
     }
 
-/*    def secretsProperties = new Properties()
-    if (rootProject.file("secrets.properties").exists()) {
-        rootProject.file("secrets.properties")?.withInputStream {
-            secretsProperties.load(it)
-        }
-    }
-    resValue "string", "google_maps_key", (secretsProperties["GOOGLE_MAPS_API_KEY"] ?: "")*/
-
 
     buildTypes {
         release {
@@ -44,9 +66,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
@@ -65,7 +87,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-core:17.5.0'
 
     // FirebaseUI
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
