--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,38 +2,9 @@ apply plugin: 'com.android.application'
 //FIREBASE
 apply plugin: 'com.google.gms.google-services'
 
-//// Creates a variable called keystorePropertiesFile, and initializes it to the
-//// keystore.properties file.
-//def keystorePropertiesFile = rootProject.file("keystore.properties")
-//
-//// Initializes a new Properties() object called keystoreProperties.
-//def keystoreProperties = new Properties()
-//
-//// Loads the keystore.properties file into the keystoreProperties object.
-//keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-//
-//resValie "string", "google_maps_key", (keystoreProperties["Google_MAPS_API_KEY"])
-
-//    def secretsProperties = new Properties()
-//    if (rootProject.file("secrets.properties").exists()) {
-//        rootProject.file("secrets.properties")?.withInputStream {
-//            secretsProperties.load(it)
-//        }
-//    }
-//    resValue "string", "google_maps_key", (secretsProperties["GOOGLE_MAPS_API_KEY"] ?: "")
-
-
 android {
-//    signingConfigs {
-//        config {
-//            keyAlias keystoreProperties['keyAlias']
-//            keyPassword keystoreProperties['keyPassword']
-//            storeFile file(keystoreProperties['storeFile'])
-//            storePassword keystoreProperties['storePassword']
-//        }
 
-
-        compileSdkVersion 29
+    compileSdkVersion 29
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -46,9 +17,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
         multiDexEnabled true
     }
 
@@ -57,31 +26,37 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            // These values are defined only for the release build, which
+            // is typically used for full builds and continuous builds.
+            buildConfigField("String", "BUILD_TIME", "6263")
+            resValue("string", "build_time", "6263")
+        }
+        debug {
+            // Use static values for incremental builds to ensure that
+            // resource files and BuildConfig aren't rebuilt with each run.
+            // If these rebuild dynamically, they can interfere with
+            // Apply Changes as well as Gradle UP-TO-DATE checks.
+            buildConfigField("String", "BUILD_TIME", "\"0\"")
+            resValue("string", "build_time", "0")
         }
     }
-
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.firebase:firebase-firestore:21.5.0'
+    implementation 'com.google.firebase:firebase-firestore:21.6.0'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-//    //BUTTERKNIFE
-//    implementation 'com.jakewharton:butterknife:10.2.1'
-//    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //circle imageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -107,10 +82,6 @@ dependencies {
 
     //location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-
-    //glide
-//    implementation 'com.github.bumptech.glide:glide:4.11.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
