--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,15 +45,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.firebase:firebase-firestore:21.6.0'
-    testImplementation 'junit:junit:4.13'
+    implementation 'com.google.firebase:firebase-firestore:21.7.1'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -61,7 +61,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.5.0'
+    implementation 'com.google.firebase:firebase-core:17.5.1'
 
     // FirebaseUI
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
@@ -80,8 +80,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     //location
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Robolectric environment
+    testImplementation 'androidx.test:core:1.3.0'
+
+    //Mockito framework
+    testImplementation 'org.mockito:mockito-core:2.19.0'
 }
