--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -20,10 +21,10 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".SettingsActivity" />
+            android:name=".ui.SettingsActivity" />
 
         <activity
-            android:name=".RestaurantDetails"
+            android:name=".ui.RestaurantDetailsActivity"
             android:label="@string/title_activity_detail_restaurant"
             android:theme="@style/AppTheme.NoActionBar" />
 
@@ -42,7 +43,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".MainActivity" android:label="@string/title_activity_bottom_nav" android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".ui.MainActivity" android:label="@string/title_activity_bottom_nav" android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -50,13 +51,15 @@
                 android:resource="@xml/searchable"/>
         </activity>
 
-        <activity android:name=".AuthActivity" android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".ui.AuthActivity" android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".util.notification.AlertReceiver" android:enabled="true" />
     </application>
 
 </manifest>
