--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,20 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-         android:label="@string/app_name"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".ui.SettingsActivity" />
-
+            android:name=".ui.Settings.SettingsActivity"
+            android:label="@string/title_activity_settings" />
         <activity
-            android:name=".ui.RestaurantDetailsActivity"
+            android:name=".ui.DetailActivity"
             android:label="@string/title_activity_detail_restaurant"
             android:theme="@style/AppTheme.NoActionBar" />
 
@@ -43,15 +42,21 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ui.MainActivity" android:label="@string/title_activity_bottom_nav" android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/title_activity_bottom_nav"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
-        </activity>
 
-        <activity android:name=".ui.AuthActivity" android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
+            android:name=".ui.AuthActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,7 +64,9 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".util.notification.AlertReceiver" android:enabled="true" />
+        <receiver
+            android:name=".util.notification.AlertReceiver"
+            android:enabled="true" />
     </application>
 
 </manifest>
